<resources>
    <string name="app_name">DocManagement</string>
    <string name="document_management">Document management</string>
    <string name="logo">logo</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="info_message">Информационное письмо</string>
    <string name="test_doc_number">Номер: ИСХ-2</string>
    <string name="test_doc_type">Вид документа: Исходящий</string>
    <string name="test_doc_title">Информационное письмо</string>
    <string name="test_doc_state">Состояние: В архиве</string>
    <string name="test_doc_date">05.01.2023 12:41</string>
    <string name="test_doc_status">Завершен</string>
    <string name="menu_item_home">Главное меню</string>
    <string name="menu_item_docs">Документы</string>
    <string name="create_document">Создать документ</string>
    <string name="my_docs">Мои документы</string>
    <string name="doc_search">Поиск документов</string>
    <string name="create_photo_record">Создать фото отчет</string>
    <string name="shot">Снимок</string>
    <string name="send">Отправить</string>
    <string name="photo_record_description">Описание фоотчета</string>
</resources>