<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/document_card_header"
                android:backgroundTint="@color/dark_yellow"
                android:gravity="center"
                android:paddingHorizontal="22dp"
                android:paddingVertical="5dp"
                android:text="@string/my_docs"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:background="@drawable/document_card_header"
                android:gravity="center"
                android:paddingHorizontal="22dp"
                android:paddingVertical="5dp"
                android:text="@string/doc_search"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_document_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/tv_create_document"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_document"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/text_color"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/filter_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@null"
            android:padding="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/filter_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/documents_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingBottom="120dp"
        app:layout_constraintEnd_toEndOf="@+id/create_document_constraint"
        app:layout_constraintStart_toStartOf="@+id/create_document_constraint"
        app:layout_constraintTop_toBottomOf="@+id/create_document_constraint" />

</androidx.constraintlayout.widget.ConstraintLayout>